--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "repository": "https://www.github.com/yasushisakai/gaze.git",
   "author": "Yasushi Sakai <ysshski@gmail.com>",
+  "scripts": {
+    "start": "webpack-dev-server",
+    "production": "webpack -p"
+  },
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
@@ -12,6 +16,8 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.26.2",
+    "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
